force-app/main/default/objects/RE_SG_CostPriceHistory__c/RE_SG_CostPriceHistory__c.object-meta.xml
<CustomObject>
    <label>Cost Price History - Singapore</label>
    <nameField>
        <displayFormat>RE-SGH-C{000000}</displayFormat>
        <label>CostPriceHistoryName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Price History - Singapore</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>