force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Cost Price Created By ID</inlineHelpText>
    <label>Cost Price Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cost_Price_SG_History</relationshipName>
    <type>Lookup</type>
</CustomField>