force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <inlineHelpText>Cost Price Created Date</inlineHelpText>
    <label>Cost Price Created Date</label>
    <type>DateTime</type>
</CustomField>