force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDate__c</fullName>
    <inlineHelpText>Cost Price Last Activity Date</inlineHelpText>
    <label>Cost Price Last Activity Date</label>
    <type>Date</type>
</CustomField>