force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <inlineHelpText>Cost Price Last Modified Date</inlineHelpText>
    <label>Cost Price Last Modified Date</label>
    <type>DateTime</type>
</CustomField>