force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/LastReferencedDate__c.field-meta.xml
<CustomField>
    <fullName>LastReferencedDate__c</fullName>
    <inlineHelpText>Cost Price Last Referenced Date</inlineHelpText>
    <label>Cost Price Last Referenced Date</label>
    <type>DateTime</type>
</CustomField>