force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/LastViewedDate__c.field-meta.xml
<CustomField>
    <fullName>LastViewedDate__c</fullName>
    <inlineHelpText>Cost Price Last Viewed Date</inlineHelpText>
    <label>Cost Price Last Viewed Date</label>
    <type>DateTime</type>
</CustomField>