force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Price Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cost_Price_SG_History2</relationshipName>
    <type>Lookup</type>
</CustomField>