force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/RE_Costprice_Laid_Down_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_Costprice_Laid_Down_Cost__c</fullName>
    <label>LDC (USD CTS/LTR)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>