force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/RE_Distillation_Discount__c.field-meta.xml
<CustomField>
    <fullName>RE_Distillation_Discount__c</fullName>
    <label>Distillation Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>