force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/RE_Fixed_Premium__c.field-meta.xml
<CustomField>
    <fullName>RE_Fixed_Premium__c</fullName>
    <label>Fixed Premium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>