force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/RE_FX_Marginal_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_FX_Marginal_Cost__c</fullName>
    <label>MC (SGD CTS/LTR)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>