force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/RE_Marketing_Selling_Tariff__c.field-meta.xml
<CustomField>
    <fullName>RE_Marketing_Selling_Tariff__c</fullName>
    <label>Marketing &amp; Selling Tariff</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>