force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/RE_MC0_Diff__c.field-meta.xml
<CustomField>
    <fullName>RE_MC0_Diff__c</fullName>
    <label>MC0 Diff</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>