force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/RE_Pricing_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_Pricing_Date__c</fullName>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>