force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/RE_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>Cost Price - Singapore</relationshipLabel>
    <relationshipName>Cost_Price_History_Singapore</relationshipName>
    <type>Lookup</type>
</CustomField>