force-app/main/default/objects/RE_SG_CostPriceHistory__c/fields/RE_Storage_Handling_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_Storage_Handling_Cost__c</fullName>
    <label>Storage &amp; Handling Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>